kubernetes/apps/rook-ceph/rook-ceph/cluster/app/httproute.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: rook-ceph-dashboard
spec:
  parentRefs:
    - name: envoy-internal
      namespace: network
      sectionName: https
  hostnames:
    - "ceph.${DOMAIN_CLUSTER}"
  rules:
    - backendRefs:
        - name: rook-ceph-mgr-dashboard
          port: 7000
